# doglib

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
docs/: dumpelf_writeup.md  extelf.md  fmtstrreader.md  gpu_pow_setup.md  orc.md
src/dog/: __init__.py
src/doglib/: __init__.py  _hijack.py  asm.py  extelf.py  ezrop.py  flagguesser.py  fmt.py  heap.py  io_file.py  log.py  misc.py  muney.py  packer.py  pow.py  rand.py
src/doglib/commandline/: dopow.py  fetchdbg.py  flagguesser.py  main.py  solve.py
src/doglib/data/: ctypes_builtin.h
src/doglib/dumpelf/: _dumper.py  _libc.py  _reconstruct.py
src/doglib/extelf/: __init__.py  _address.py  _builtin_types.py  _cheader.py  _constants.py  _crafter.py  _elf.py  _enum.py  _resolver.py
src/doglib/fmt/: __init__.py  (+2 more)
src/doglib_rs/: Cargo.toml
src/doglib_rs/crates/pow_solver/: Cargo.toml  build.rs
src/doglib_rs/crates/pow_solver/benches/: hash_pow_bench.rs
src/doglib_rs/crates/pow_solver/cuda/: sha1_pow.cu  sha256_pow.cu
src/doglib_rs/crates/pow_solver/examples/: bench.rs  gpu_bench.rs
src/doglib_rs/crates/pow_solver/src/: constants.rs  gpu.rs  hash_pow.rs  lib.rs
src/doglib_rs/crates/pow_solver/src/sloth/: field.rs  field_avx512.rs  mod.rs  solver.rs
tests/: .gdb_history  fmtstr  fmtstr.c  stc
tests/dumpelf/: conftest.py  test_dumpelf.py
tests/extelf/: challenge  challenge.c  complex_structs.h  conftest.py  solve.py  test_extelf.py
tests/flagguesser/: test_flagguesser.py
tests/imports/: test_clobber.py
tests/orc/: .gdb_history  challenge  conftest.py  test_address.py  test_challenge.py  test_crafter.py  test_orc.py  test_rust_parser.py
tests/pow/: test_hash_pow.py  test_sloth.py
tests/rand/: test_rand.py
tests/shellcode/: test_shellcode.py
(+31 files in other folders)
