[project]
name = "doglib"
version = "0.1.0"
description = "personal extensions to pwntools"
readme = "README.md"
authors = [
    { name = "corgo", email = "corgo@dog.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pwntools",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]
rust = [
    "doglib-rs @ {root:uri}/src/doglib_rs",
]

[project.scripts]
dog = "doglib.commandline.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/doglib", "src/dog"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
packages = ["src/doglib", "src/dog"]

[tool.pytest.ini_options]
testpaths = ["tests"]
